--- a/nginx-app/templates/configmap.yaml
+++ b/nginx-app/templates/configmap.yaml
@@ -1,4 +1,3 @@
-{{- if .Values.configMap.enabled }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -6,11 +5,10 @@ metadata:
   labels:
     app: nginx-app
 data:
-  index.html: |
+  index.html: |-
     <!DOCTYPE html>
     <html>
     <body>
-        <h1>Hello World!</h1>
+      <h1>Hello World!</h1>
     </body>
-    </html>
-{{- end }} 
+    </html> 
